# LPC-on-Clion

./: .gitignore  CMakeLists.txt  README.md
firmware/device/: aeabi_romdiv_patch.s  fsl_device_registers.h
src/: main.cpp
